# REALM

./: README.md  config.py  generate_heatmaps.sh  model7778.ipynb  pyproject.toml  requirements.txt  train.sh  utils.py
datasets/test/: image_descriptions.csv
datasets/train/: image_descriptions.csv
localization/: compute_heatmaps.py  desc_generation.py  get_unrealism_heatmaps.py  run_dream.py  run_heatmap_analysis.py
regression/: core.py  inference.py  realism_dataset.py  regression_model.py  train.py
scripts/: compute_heatmaps.sh  run_inference.sh  run_training.sh
